tests/NormalTests/paczka1/fuzzy1/19141729.err
Error in line 2: 9cgZapIL S943 77,6
Error in line 3: 9cgZapIL A12 9,6
Error in line 1: IDD7 A597 32,0
Error in line 10: A597 A403 4,8
Error in line 33: 9cgZapIL A403 4,9
